tests/cases/compiler-development/artifact/errors/diagnostic-match-empty.diagnostic
diagnostic error code=T0001 family=type message="match must have at least one arm" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-empty.ari" display="tests/cases/match/errors/match-empty.ari" bytes=97
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-empty.ari" line=8 column=3 end_line=8 end_column=8 byte_start=65 byte_end=70 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-empty.ari:8:3\n   |\n 8 |   match value {\n   |   ^^^^^"
  Note index=0 location=none message="match expressions and statements need at least one arm so type checking and exhaustiveness can be evaluated"
  Help index=0 location=none message="add an arm such as `_ => { ... }` or remove the empty match"
